fix: change flex alignment in cards container

--- a/src/components/cards/Cards.css
+++ b/src/components/cards/Cards.css
@@ -1,6 +1,7 @@
 .Cards {
   display: flex;
   flex-flow: row wrap;
+  justify-content: space-around;
   gap: 20px 50px;
   width: 80%;
   max-width: 1440px;
